Fix github svg alignment

--- a/src/sass/layout/_main.scss
+++ b/src/sass/layout/_main.scss
@@ -199,4 +199,9 @@ p {
     margin-bottom: 0;
     width: 100%;
   }
+
+  .head svg {
+    position: relative;
+    top: 2px;
+  }
 }
